--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,7 @@
 rootProject.name = 'war-paths-poc'
 include 'war-resteasy'
-include 'war-dep1'
 include 'war-cxf'
+include 'module1-endpoints'
+include 'module2-serviceImpl'
+include 'module3-cxf'
+include 'module4-resteasy'
