--- a/module3-cxf/build.gradle
+++ b/module3-cxf/build.gradle
@@ -12,13 +12,18 @@ war {
 
 dependencies {
     compile 'org.slf4j:slf4j-api:1.7.13'
+	compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
+    
   	compile group: 'javax.enterprise', name: 'cdi-api', version: '1.1-PFD'
-	  compile group: 'com.fasterxml.jackson.jaxrs', name: 'jackson-jaxrs-json-provider', version: '2.7.1'
+	compile group: 'com.fasterxml.jackson.jaxrs', name: 'jackson-jaxrs-json-provider', version: '2.7.1'
 
     compile group: 'org.apache.cxf', name: 'cxf-rt-frontend-jaxws', version: '3.1.7'
-	  compile group: 'org.apache.cxf', name: 'cxf-rt-frontend-jaxrs', version: '3.1.7'
+	compile group: 'org.apache.cxf', name: 'cxf-rt-frontend-jaxrs', version: '3.1.7'
     compile group: 'org.apache.cxf', name: 'cxf-rt-transports-http', version: '3.1.7'
-    compile group: 'org.springframework', name: 'spring-web', version: '4.3.1.RELEASE'
+    compile group: 'org.springframework', name: 'spring-web', version: '4.3.8.RELEASE'
+	compile group: 'org.springframework', name: 'spring-aop', version: '4.3.8.RELEASE'
+	compile('org.springframework:spring-aspects:4.3.8.RELEASE')
+    
     testCompile 'junit:junit:4.12'
 
     compile project(':module1-endpoints')
